dynamic config로 바꿈 path와 port를를
